[tool.poetry]
name = "repl_python3_hacker-school"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wget = "^3.2"
bs4 = "^0.0.1"
cssutils = "^1.0.2"
names = "^0.3.0"
opencv-python = "^4.4.0"
pytube = "^9.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
